# eeg-to-intent-toolkit

./: .clang-tidy  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml  pytest.ini  requirements-dashboard.txt
.copilot/: config.json  prompts.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: build.yml  deploy.yml  security.yml  test.yml
benchmarks/: __init__.py  config.py  run_bcic_iv_2a_eegnet.py  run_demo_benchmark.py  wandb_config.py
config/checkstyle/: checkstyle.xml
configs/data/: bci_iv_2a.yaml
configs/train/: eegnet_bci2a.yaml
docs/: PROJECT_GOALS.md  WORKFLOW.md  demo_video_script.md  paper_report.md  phase4_realtime.md  project_plan.md  universal_docker.md
docs/tutorials/: 01_quickstart.md  README.md
examples/: realtime_pipeline.py
notebooks/: 00_quickstart.ipynb  01_data_exploration.ipynb  personalization_tutorial.ipynb
scripts/: benchmark_inference.py  build_docker.sh  dev-down.sh  dev-exec.sh  dev-logs.sh  dev-scan.sh  dev-up.sh  lint.sh  run_docker.sh  test.sh
src/eegintent/: __init__.py  cli.py  hosting.py  run_dashboard.py
src/eegintent/baselines/: __init__.py  riemann.py
src/eegintent/data/: loaders.py  pool.py  preprocess.py
src/eegintent/evaluation/: splits.py
src/eegintent/experiments/: __init__.py  ablation.py
src/eegintent/export/: __init__.py  (+1 more)
tests/: test_cli.py  test_data_preprocess.py  test_models.py  test_personalization.py  test_realtime.py  test_splits.py  test_ssl.py  test_training.py
(+27 files in other folders)
