[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eegintent"
version = "0.1.0"
description = "EEG-to-Intent Toolkit: training, SSL, and real-time inference for EEG-based mental state decoding."
authors = [{ name = "EEG-to-Intent Toolkit Contributors" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scipy>=1.11",
    "mne>=1.6",
    "mne-bids>=0.14",
    "moabb>=0.5.0",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "antropy>=0.1.6",
    "yasa>=0.6.3",
    "pyriemann>=0.5",
    "einops>=0.7",
    "torch>=2.2",
    "pytorch-lightning>=2.3",
    "wandb>=0.17",
    "mlflow>=2.12",
    "tqdm>=4.66",
    "scikit-learn>=1.4",
    "pylsl>=1.16.2",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "onnxruntime>=1.18",
    "onnx>=1.16",
]

[project.optional-dependencies]
dev = [
    "black>=24.3",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "nbmake>=1.5.3",
    "pre-commit>=3.7.0",
]

[project.scripts]
eegintent = "eegintent.cli:app"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PL", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
